2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rpm support.
	* Makefile.am: Include rpm generation rule.
	* build-aux: Synchronize.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* build-aux: Synchronize.
	* roboptim-core.spec.in: Fix description and rules.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec files.
	* roboptim-core.spec.in: Install additional files
	and fix dependencies.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core.spec.in: Fix mistakes detected by rpmlint.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Add RPM spec file.
	* roboptim-core.spec.in: New.

2009-11-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ROBOPTIM_DLLLOCAL when needed.
	* src/finite-difference-gradient.cc: Here.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ``this->'' in template code to help the compiler.
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/solver.hxx: Here.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Factorize rules using build-aux.
	* Makefile.am: Use factorized rules..
	* build-aux: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Move common.hh to shared-tests submodule.
	* .gitmodules: Register submodule.
	* tests/Makefile.am: Fix common.hh path and add
	shared-tests to include path.
	* tests/common.hh: Remove.
	* tests/shared-tests: New.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Limit output precision when displaying a function.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Limit output precision to two digits.
	* tests/finite-difference-gradient.stdout,